<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_route"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/route" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/inventory" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="Clientes" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@android:drawable/ic_menu_report_image"
            android:title="@string/statistics" />
    </group>
    <item android:title="Cuenta">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
